Fix the css for the search bar alignment and add padding to the movie title in the thumbnails also fix the backround in the container page

--- a/src/Components/Movie/Movie.css
+++ b/src/Components/Movie/Movie.css
@@ -32,6 +32,8 @@
 
 .movie-title, .movie-rating {
   margin: 0;
+  padding-left: 5px;
+  padding-right: 5px
 }
 
 .movie-title {
