--- a/src/Components/MoviesContainer/MoviesContainer.css
+++ b/src/Components/MoviesContainer/MoviesContainer.css
@@ -1,4 +1,5 @@
 .movies-container {
+  height: 100vh;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
